# vibrant

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  justfile  package.json  static_build.ts
cli/: Cargo.toml  README.md  justfile
cli/src/: config.rs  main.rs
cli/www/: index.html
deployment_image/: Dockerfile  justfile
server/: Cargo.toml  static_build.ts
server/deployment_image/: README.md  init_container.sh
server/src/: db.rs  main.rs  serve_middleware.rs
server/src/api/: auth.rs  projects.rs
server/src/pages/: admin.rs  base.rs  dashboard.rs  home.rs  mod.rs
server/static/: style.css
server/static/ts/editors/: SettingsEditor.ts
server/static/ts/pages/: Footer.ts  NewProject.ts  ViewProject.ts  ViewProjectPublic.ts
server/templates/: base.html  homepage.html
server/templates/admin/: homepage.html  sql.html
server/templates/dashboard/: auth_picker.html  homepage.html
server/templates/dashboard/project/: public.html  settings.html  view.html
server/templates/general/: 404.html
src/: db.rs  main.rs  serve_middleware.rs
src/api/: auth.rs  projects.rs
src/pages/: base.rs  dashboard.rs  errors.rs
static/: style.css
static/ts/editors/: FileEditor.ts  SettingsEditor.ts
static/ts/pages/: Footer.ts  NewProject.ts  ProjectSettings.ts  ViewProject.ts
templates/: base.html  homepage.html
templates/dashboard/: auth_picker.html  homepage.html  new_project.html  projects.html
templates/dashboard/project/: editor.html  view.html
templates/general/: 404.html
