[package]
name = "vibrant"
authors = ["hkau"]
license = "MIT"

version = "0.2.0"
edition = "2021"

[features]
postgres = ["dorsal/postgres"]
mysql = ["dorsal/mysql"]
sqlite = ["dorsal/sqlite"]
default = ["dorsal/sqlite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
askama = "0.12.1"
awc = { version = "3.4.0", features = ["rustls"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
dorsal = { version = "0.1.3", registry = "stellular", default-features = false } # crates: disable-check
regex = "1.10.4"
bollard = "0.16.1"
base64 = "0.22.0"
futures-util = "0.3.30"
