[package]
name = "vibsync"
description = "Vibrant Sync CLI"
authors = ["hkau"]
license = "MIT"

version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
awc = { version = "3.4.0", features = ["rustls"] }
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.12"
